--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,7 +1,7 @@
-@import './keyframes';
-@import './variables';
-@import './placeholder';
-@import './mixins';
+@import '../../styles/keyframes';
+@import '../../styles/variables';
+@import '../../styles/placeholder';
+@import '../../styles/mixins';
 
 .stars, .twinkling {
   @extend %stars-twinklig-config;
